CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE__c.object
<CustomObject>
    <description>Chats cases</description>
    <fields>
        <fullName>Is_CBMS_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is CBMS Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDE_CBMS_REF_TYP__c</fullName>
        <label>Referral Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CBMS_Ref_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_MissingInfo_Status__c</fullName>
        <label>Missing Info Letter Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>NA</fullName>
                    <default>true</default>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>OPEN</fullName>
                </value>
                <value>
                    <fullName>PROCESSED</fullName>
                </value> 
                <value>
                    <fullName>FAILED</fullName>
                </value>                
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDN_CBMS_REF__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Referrral Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRI_METHOD_OF_CON__c</fullName>
        <label>Primary method of Contact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Primary_method_of_contact</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_CW_PGM__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Household receives CW?</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_INTER_COUNTY_TRANSFER__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inter County Transfer</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIOR_COUNTY__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Prior County</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CASE_CLOSURE_REASON__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Case Closure reason</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAYMENT_MONTH__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Payment Month</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_CITY_PROVR__c</fullName>
        <description>Provider City</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Provider City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_LINE_1_PROVR__c</fullName>
        <description>Provider Address</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Provider Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADR_STATE_PROVR__c</fullName>
        <label>Provider State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00002</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADR_ZIP_PROVR__c</fullName>
        <description>Provider Zip</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme> 
        <label>Provider Zip</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AMT_INCOME__c</fullName>
        <description>Income Amount</description>
        <label>Income Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00373</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_ASST_HSNG__c</fullName>
        <description>Does the household receive benefits from Housing Voucher or Cash Assistance?</description>
        <label>Household receives Voucher/Cash Asst?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00717</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_COUNTY__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>County</label>
        <referenceTo>T_COUNTY__c</referenceTo>
        <relationshipLabel>Case</relationshipLabel>
        <relationshipName>Case_County</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDE_LANG_CORR__c</fullName>
        <label>Primary Language Spoken at Home</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00057</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_STATUS_WTLST__c</fullName>
        <description>Waitlist/Enrollment Freeze Status</description>
        <label>Waitlist/Enrollment Freeze Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00754</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CLOSED_CASES_STATUS__c</fullName>
        <description>check the Status is closed?</description>
        <label>Closed Cases</label>
        <summaryFilterItems>
            <field>T_SBSD_CASE_STATUS_MODE__c.CDE_STATUS_CASE__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>T_SBSD_CASE_STATUS_MODE__c.DTE_END_EFFV__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>T_SBSD_CASE_STATUS_MODE__c.IDN_CASE__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CNT_CC_NEED_CHILD__c</fullName>
        <description>Number of children needing care</description>
        <label>Number of children needing care</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CNT_SIZE_FAMILY__c</fullName>
        <description>Family Size</description>
        <label>Family Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DTE_APPLN__c</fullName>
        <description>Date Application Received</description>
        <label>Date Application Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_CHGD_LAST_DATA_ELIGTY__c</fullName>
        <description>Eligibility Data Last Changed Date</description>
        <label>Eligibility Data Last Changed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_RCVD_PACKET_REDET__c</fullName>
        <description>Redetermination Packet Received Date</description>
        <label>Redetermination Packet Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_REDET_CASE__c</fullName>
        <description>Case Redetermination Date</description>
        <label>Case Redetermination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_REDET_LAST__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Redetermination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_REDET_MODE_CASE__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Case Entered Redetermination Mode</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_REOPEN_LATEST__c</fullName>
        <description>Latest Reopen Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Latest Reopen Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_SENT_PACKET_REDET__c</fullName>
        <description>Redetermination Packet Sent Date</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Redetermination Packet Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_CASE_LEGACY__c</fullName>
        <description>Legacy Case Identifier</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Legacy Case Identifier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Case ID External</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IDN_PEAK_APPLN__c</fullName>
        <description>Peak Application ID</description>
        <label>Peak Application ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDN_PROVR__c</fullName>
        <description>Provider ID</description>
        <label>Provider ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IND_ASSIST_PROVR__c</fullName>
        <description>Did a provider assist you in completing</description>
        <label>Provider assisted with application?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00619</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_ASST_HSNG_ADDL__c</fullName>
        <label>If not, would you like information?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00717</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_CHGD_DATA_ELIGTY__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Eligibility Data Changed</description>
        <label>Eligibility Data Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IND_CHP_ADDL__c</fullName>
        <label>If not, would you like information?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00717</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_Child_SS_participant__c</fullName>
        <label>Child Support Services participant?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00880</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_CHP__c</fullName>
        <label>Household receives Medicaid/CHP+?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00717</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_ELG_PRE_PROVR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pre-Eligibility Determination</description>
        <label>Pre-Eligibility Determination</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IND_EMERG_DECLRD_FED__c</fullName>
        <formula>OR(TEXT(IND_LEAP__c)==&apos;Y&apos;, TEXT(IND_SSI__c)== &apos;Y&apos;, TEXT(IND_PENSION__c)==&apos;Y&apos;, TEXT(IND_REFUGEE__c)==&apos;Y&apos;)</formula>
        <label>LEAP/SSI/OAP/Refugee Medical Assistance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IND_FOOD_PGM_ADDL__c</fullName>
        <label>If not, would you like information?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00717</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_FOOD_PGM__c</fullName>
        <label>Household receives Food Program?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00717</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_FS_RCVNG_ADDL__c</fullName>
        <label>If not, would you like information?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00717</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_FS_RCVNG__c</fullName>
        <label>Household receives SNAP?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00717</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_HEAD_START_ADDL__c</fullName>
        <label>If not, would you like information?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00717</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_HEAD_START__c</fullName>
        <label>Household receives Head Start/Early HS?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00717</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_IDEA_0_3_ADDL__c</fullName>
        <label>If not, would you like information?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00717</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_IDEA_0_3__c</fullName>
        <label>Participates in Early Intervention CO?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00717</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_IDEA_3_5_ADDL__c</fullName>
        <label>If not, would you like information?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00717</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_IDEA_3_5__c</fullName>
        <label>Receives Preschool Special Education?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00717</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_INCOME_FED_OTHER_ADDL__c</fullName>
        <label>If not, would you like information?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00717</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_INCOME_FED_OTHER__c</fullName>
        <label>Household receives COWks/TANF/Cash Asst?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00717</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Peak_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Peak Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IND_LEAP_ADDL__c</fullName>
        <label>If not, would you like information?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00717</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_LEAP__c</fullName>
        <label>Household receives LEAP?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00717</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_PENSION_ADDL__c</fullName>
        <label>If not, would you like information?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00717</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_PENSION__c</fullName>
        <label>Household receives Old Age Pension?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00717</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_REFUGEE_ADDL__c</fullName>
        <label>If not, would you like information?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00717</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_REFUGEE__c</fullName>
        <label>Household receives Refugee Medical Asst?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00717</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_RESDT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indicator Resident</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IND_SSI_ADDL__c</fullName>
        <label>If not, would you like information?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00717</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_SSI__c</fullName>
        <label>Household receives SSI?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00717</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pending_Case_Status__c</fullName>
        <label>Pending Case Status</label>
        <summaryFilterItems>
            <field>T_SBSD_CASE_STATUS_MODE__c.CDE_STATUS_CASE__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>T_SBSD_CASE_STATUS_MODE__c.DTE_END_EFFV__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>T_SBSD_CASE_STATUS_MODE__c.IDN_CASE__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IND_VERIF_PNDG_DATA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Verify Pending Data</description>
        <label>Verify Pending Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IND_WIC_ADDL__c</fullName>
        <label>If not, would you like information?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00717</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IND_WIC__c</fullName>
        <label>Household receives WIC?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00717</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOC_ELG_DETERM__c</fullName>
        <description>Who determined eligibility?</description>
        <label>Who determined eligibility?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00205</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NAM_FACLTY_PROVR__c</fullName>
        <description>Provider/Facility Name</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Provider/Facility Name</label>
        <length>51</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_FIRST_PROVR__c</fullName>
        <description>Provider First Name</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Provider First Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_LAST_PROVR__c</fullName>
        <description>Provider Last Name</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Provider Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAM_PRIMARY_CARETAKER__c</fullName>
        <label>Primary Caretaker</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPEN_CASE_STATUS__c</fullName>
        <label>Open Cases</label>
        <summaryFilterItems>
            <field>T_SBSD_CASE_STATUS_MODE__c.CDE_STATUS_CASE__c</field>
            <operation>contains</operation>
            <value>Open, Pending, Reopen</value>
        </summaryFilterItems>
        <summaryForeignKey>T_SBSD_CASE_STATUS_MODE__c.IDN_CASE__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ongoing_And_Open_Cases__c</fullName>
        <label>Ongoing And Open Cases</label>
        <summaryFilterItems>
            <field>T_SBSD_CASE_STATUS_MODE__c.CDE_STATUS_CASE__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>T_SBSD_CASE_STATUS_MODE__c.CDE_MODE_CASE__c</field>
            <operation>equals</operation>
            <value>Ongoing</value>
        </summaryFilterItems>
        <summaryForeignKey>T_SBSD_CASE_STATUS_MODE__c.IDN_CASE__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TXT_OTHER__c</fullName>
        <description>Other source of benefits</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Other source of benefits</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DTE_CASE_TRANSFER__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Case Transfer Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDE_COUNTY_TRANSFER__c</fullName>
        <label>County Transferred To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00005</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutoNumber__c</fullName>
        <displayFormat>{0000000}</displayFormat>
        <label>AutoNumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Bypass_CaseName_ValidationRule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CCCAP-2720: Used to bypass &apos;Case_Name_not_editable&apos; validation rule</description>
        <label>Bypass_CaseName_ValidationRule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Reverse_Refer_Track__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for marked a case that needs to be send in next file to CBMS.</description>
        <label>Case Reverse Refer Track</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Reopened__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case Reopened</description>
        <label>Case Reopened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHATS_Reverse_Refer_Mode__c</fullName>
    <label>CHATS Reverse Refer Mode</label>
    <description>This field is used for maintaining information about the triggers point for which Case and related information will be shared with CBMS.</description>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Closure</fullName>
            </value>
            <value>
                <fullName>Pending Case</fullName>
            </value>
            <value>
                <fullName>Parent Fee Creation</fullName>
            </value>
            <value>
                <fullName>Parent Fee Update</fullName>
            </value>
            <value>
                <fullName>Auth Creation</fullName>
            </value>
            <value>
                <fullName>Auth Termination</fullName>
            </value>
            <value>
                <fullName>Auth Schedules Update</fullName>
            </value>
            <value>
                <fullName>Parent Fee Delinquency Creation</fullName>
            </value>
            <value>
                <fullName>Parent Fee Delinquency Resolution Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    </fields>
    <label>Case</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CLOSED_CASES_STATUS__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>DTE_REDET_CASE__c</columns>
        <columns>DTE_RCVD_PACKET_REDET__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Case ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <!--Commented as part of CCCAP-10798-->
    <!--validationRules>
        <fullName>Cannot_upd_Redet_Pckge_Rcvd_Date</fullName>
        <active>false</active>
        <description>Cannot Update Redetermination Package Receive Date if the Case Status is Closed</description>
        <errorConditionFormula>AND( NOT( ISNEW() ) ,
    ISCHANGED( DTE_RCVD_PACKET_REDET__c ),
    CLOSED_CASES_STATUS__c &gt; 0
)</errorConditionFormula>
        <errorMessage>Cannot Update Redetermination Package Receive Date if the Case Status is Closed</errorMessage>
    </validationRules-->
    <validationRules>
        <fullName>Require_Provider_Facility_Name</fullName>
        <active>true</active>
        <description>Please provide Provider/Facility Name.</description>
        <errorConditionFormula>AND(!(Is_Peak_Data__c || (ISCHANGED(Is_Peak_Data__c) &amp;&amp; !Is_Peak_Data__c)),!(Is_CBMS_Data__c || (ISCHANGED(Is_CBMS_Data__c) &amp;&amp; !Is_CBMS_Data__c)),ISPICKVAL(IND_ASSIST_PROVR__c,&apos;Y&apos;) , ISBLANK(NAM_FACLTY_PROVR__c) )</errorConditionFormula>
        <errorDisplayField>NAM_FACLTY_PROVR__c</errorDisplayField>
        <errorMessage>Please provide Provider/Facility Name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Provider_First_Name</fullName>
        <active>true</active>
        <description>Please provide Provider First Name.</description>
        <errorConditionFormula>AND( !(Is_Peak_Data__c || (ISCHANGED(Is_Peak_Data__c) &amp;&amp; !Is_Peak_Data__c)) ,!(Is_CBMS_Data__c || (ISCHANGED(Is_CBMS_Data__c) &amp;&amp; !Is_CBMS_Data__c)),ISPICKVAL(IND_ASSIST_PROVR__c,&apos;Y&apos;) , ISBLANK(NAM_FIRST_PROVR__c) )</errorConditionFormula>
        <errorDisplayField>NAM_FIRST_PROVR__c</errorDisplayField>
        <errorMessage>Please provide Provider First Name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Provider_ID</fullName>
        <active>true</active>
        <description>Please provide the Provider ID</description>
        <errorConditionFormula>AND( !(Is_Peak_Data__c || (ISCHANGED(Is_Peak_Data__c) &amp;&amp; !Is_Peak_Data__c)) ,!(Is_CBMS_Data__c || (ISCHANGED(Is_CBMS_Data__c) &amp;&amp; !Is_CBMS_Data__c)),ISPICKVAL(IND_ASSIST_PROVR__c,&apos;Y&apos;) , ISBLANK(IDN_PROVR__c) )</errorConditionFormula>
        <errorDisplayField>IDN_PROVR__c</errorDisplayField>
        <errorMessage>Please provide the Provider ID</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Provider_last_name</fullName>
        <active>true</active>
        <description>Please provide Provider Last Name.</description>
        <errorConditionFormula>AND(!(Is_Peak_Data__c || (ISCHANGED(Is_Peak_Data__c) &amp;&amp; !Is_Peak_Data__c))  ,!(Is_CBMS_Data__c || (ISCHANGED(Is_CBMS_Data__c) &amp;&amp; !Is_CBMS_Data__c)),ISPICKVAL(IND_ASSIST_PROVR__c,&apos;Y&apos;) , ISBLANK(NAM_LAST_PROVR__c) )</errorConditionFormula>
        <errorDisplayField>NAM_LAST_PROVR__c</errorDisplayField>
        <errorMessage>Please provide Provider Last Name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Who_determined_eligibility</fullName>
        <active>true</active>
        <description>Please Enter Who Determined Eligibility.</description>
        <errorConditionFormula>AND(!(Is_Peak_Data__c || (ISCHANGED(Is_Peak_Data__c) &amp;&amp; !Is_Peak_Data__c)),!(Is_CBMS_Data__c || (ISCHANGED(Is_CBMS_Data__c) &amp;&amp; !Is_CBMS_Data__c)),IND_ELG_PRE_PROVR__c == TRUE,ISBLANK(TEXT(LOC_ELG_DETERM__c)))</errorConditionFormula>
        <errorDisplayField>LOC_ELG_DETERM__c</errorDisplayField>
        <errorMessage>Please Enter Who Determined Eligibility.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cannot_chng_county</fullName>
        <active>true</active>
        <description>CHAT-1150: Read-only after record is created</description>
        <errorConditionFormula>AND( NOT(ISNEW()),
     ISCHANGED( CDE_COUNTY__c )
)</errorConditionFormula>
        <errorDisplayField>CDE_COUNTY__c</errorDisplayField>
        <errorMessage>county cannot be changed once the case record is created</errorMessage>
    </validationRules>
    <!--Commented as part of CCCAP-10798-->
    <!--validationRules>
        <fullName>county_affltd_to_usrProfile_ownercounty</fullName>
        <active>false</active>
        <description>CHAT-1150: User cannot enter a County that&apos;s not affiliated with the User&apos;s profile</description>
        <errorConditionFormula>VALUE(TEXT( Owner:User.Owner_County__c )) &lt;&gt;  CDE_COUNTY__r.CDE_COUNTY__c</errorConditionFormula>
        <errorDisplayField>CDE_COUNTY__c</errorDisplayField>
        <errorMessage>Cannot enter a County that&apos;s not affiliated with the User&apos;s profile</errorMessage>
    </validationRules-->
    <validationRules>
        <fullName>Case_Transfer_Effective_Date</fullName>
        <active>false</active>
        <description>- Cannot be before T_SBSD_CASE.DTE_APPLN
- Cannot be before 8/10/2018
- Required if CDE_COUNTY_TRANSFER is populated</description>
        <errorConditionFormula>OR(
   DTE_APPLN__c &gt; DTE_CASE_TRANSFER__c,
   Datevalue(&quot;2018-08-10&quot;) &gt; DTE_CASE_TRANSFER__c
)</errorConditionFormula>
        <errorDisplayField>DTE_CASE_TRANSFER__c</errorDisplayField>
        <errorMessage>Case Transfer Effective Date cannot be before Date Application Received or  8/10/2018.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Case_Transfer_Effective_Date_NotNULL</fullName>
        <active>false</active>
        <description>- Cannot be before T_SBSD_CASE.DTE_APPLN
- Cannot be before 8/10/2018
- Required if CDE_COUNTY_TRANSFER is populated</description>
        <errorConditionFormula>AND(
	    NOT(ISBLANK(TEXT(CDE_COUNTY_TRANSFER__c))),
        (ISBLANK(DTE_CASE_TRANSFER__c))
	)</errorConditionFormula>
        <errorDisplayField>DTE_CASE_TRANSFER__c</errorDisplayField>
        <errorMessage>Case Transfer Effective Date required field when County Transferred To field is not blank.</errorMessage>
    </validationRules>
     <validationRules>
        <fullName>County_Transferred_To_NotNULL</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
	    ISBLANK(TEXT(CDE_COUNTY_TRANSFER__c)),
        NOT(ISBLANK(DTE_CASE_TRANSFER__c))
	)</errorConditionFormula>
        <errorDisplayField>CDE_COUNTY_TRANSFER__c</errorDisplayField>
        <errorMessage>County Transferred To required field when Case Transfer Effective Date field is not blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Appl_Recvd_Date_cannot_be_future</fullName>
        <active>true</active>
        <description>Application Received Date cannot be in future</description>
        <errorConditionFormula>AND(NOT(ISBLANK(DTE_APPLN__c)), DTE_APPLN__c &gt; TODAY())</errorConditionFormula>
        <errorDisplayField>DTE_APPLN__c</errorDisplayField>
        <errorMessage>Date Application Received cannot be in future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Case_Name_not_editable</fullName>
        <active>true</active>
        <description>CCCAP-2720 : To restrict Case Name being edited from List view in Case tab</description>
        <errorConditionFormula>AND(
 ISCHANGED( Name ),
 NOT(ISBLANK(PRIORVALUE( Name ))),
 PRIORVALUE( Name ) &lt;&gt; &quot;RECORD_FROM_CASE_FLOW&quot;,
 NOT (Bypass_CaseName_ValidationRule__c)
)</errorConditionFormula>
        <errorMessage>Case Name can not be changed after creation</errorMessage>
    </validationRules>
</CustomObject>