CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE__c/validationRules/Appl_Recvd_Date_cannot_be_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Appl_Recvd_Date_cannot_be_future</fullName>
    <active>true</active>
    <description>Application Received Date cannot be in future</description>
    <errorConditionFormula>AND(NOT(ISBLANK(DTE_APPLN__c)), DTE_APPLN__c &gt; TODAY())</errorConditionFormula>
    <errorDisplayField>DTE_APPLN__c</errorDisplayField>
    <errorMessage>Date Application Received cannot be in future.</errorMessage>
</ValidationRule>