CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE__c/validationRules/cannot_chng_county.validationRule-meta.xml
<ValidationRule>
    <fullName>cannot_chng_county</fullName>
    <active>true</active>
    <description>CHAT-1150: Read-only after record is created</description>
    <errorConditionFormula>AND( NOT(ISNEW()),
     ISCHANGED( CDE_COUNTY__c )
)</errorConditionFormula>
    <errorDisplayField>CDE_COUNTY__c</errorDisplayField>
    <errorMessage>county cannot be changed once the case record is created</errorMessage>
</ValidationRule>